fix: change to neutral-layer colors for bg contrasting

--- a/packages/mgt-components/src/components/mgt-file/mgt-file.theme.scss
+++ b/packages/mgt-components/src/components/mgt-file/mgt-file.theme.scss
@@ -8,6 +8,6 @@
 $line1__color: var(--file-line1-color, var(--neutral-foreground-rest));
 $line2__color: var(--file-line2-color, var(--neutral-foreground-hint));
 $line3__color: var(--file-line3-color, var(--neutral-foreground-hint));
-$file-background-color: var(--file-background-color, var(--neutral-fill-rest));
-$file-background-color-focus: var(--file-background-color-focus, var(--neutral-fill-focus));
-$file-background-color-hover: var(--file-background-color-hover, var(--neutral-fill-hover));
+$file-background-color: var(--file-background-color, var(--neutral-layer-1));
+$file-background-color-focus: var(--file-background-color-focus, var(--neutral-layer-2));
+$file-background-color-hover: var(--file-background-color-hover, var(--neutral-layer-2));
